[package]
name = "getheode"
version = "0.1.0"
edition = "2024"
default-run = "getheode"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
clap = "4.5.37"
regex = "1.11.1"
unicode-normalization = "0.1.24"
cfg = "0.9.0"
paste = "1.0" # macros
nom = { version = "8.0.0", features = ["alloc"] } # for parsing

[dependencies.uuid]
version = "1.15.1"
features = ["v4"]

# enable the right features in the dependencies when targetting WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["v4", "js"] }

[[bin]]
name = "getheode"
path = "src/bin/cli.rs"
